fix: toggle overview map button not clickable fix: attributions button overlapped toggle overview maps button when map was collapsed

--- a/modules/controls/style.less
+++ b/modules/controls/style.less
@@ -15,6 +15,7 @@
 .controls-row-right {
     position: relative;
     margin-right: 12px;
+    min-height:40px;
 }
 .controls-row-left {
     position: relative;
@@ -78,13 +79,11 @@
     margin-right: 34px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176);
     border: 1px solid rgb(229, 229, 229);
-    margin-bottom: 20px;
 }
 .attributions-button {
     position: absolute;
     right: 0;
     bottom: 0;
-    margin-bottom: 20px;
 }
 .attributions-view {
     dt {
@@ -141,7 +140,7 @@
 .control-view-bottom-right {
     position: absolute;
     right: 3px;
-    bottom: 0;
+    bottom: 30px;
 }
 .control-view-bottom-left {
     position: absolute;
